--- a/catalog.html
+++ b/catalog.html
@@ -16,18 +16,24 @@
     <li><a href="contacts.html">Контакты</a></li>
 </ul>
 <hr>
-<h2>Главная</h2>
-<p>
-    Приветствую вас, дорогие друзья!
-</p>
-<p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem cum exercitationem id itaque iusto laborum
-    laudantium minus necessitatibus, nobis nulla numquam odio quas reiciendis rem reprehenderit rerum sequi sit veniam.
-</p>
-<a href="https://yandex.ru">Ссылочка во вне на Яндекс</a>
+<h2>Каталог</h2>
+<ol>
+    <li>
+        <p>
+            <img src="img/aple.jpg" alt="Яблоки Семиринка" style="height: auto; width: 200px; "><br>
+            <a href="catalog/aple.html">Яблоки "Семиринка"</a>
+        </p>
+    </li>
+    <li>
+        <p>
+            <img src="img/bananas.jpg" alt="Бананы" style="height: auto; width: 200px; "><br>
+            <a href="catalog/bananas.html">Бананы</a>
+        </p>
+    </li>
+</ol>
 <footer>
     <hr>
-    <p>&copy; Все права защищены</p>
+    <p>&copy; Все прва защищены</p>
 </footer>
 </body>
 </html>
