Исправлены замечания и навешаны пару стилей

--- a/catalog/aple.html
+++ b/catalog/aple.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FrAzbuka</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-<header>
+<header class="title">
     <h1>Интернет-магазинчик фруктов и овощей "Фруктовая азбука"</h1>
     <hr>
 </header>
-<ul>
-    <li><a href="../index.html">Главная</a></li>
-    <li><a href="../catalog.html">Каталог</a></li>
-    <li><a href="../contacts.html">Контакты</a></li>
+<ul class="menu">
+    <a href="../index.html">Главная</a>
+    <a href="../catalog.html">Каталог</a>
+    <a href="../contacts.html">Контакты</a>
 </ul>
 <hr>
 <h2>Яблоки "Семиринка"</h2>
