--- a/catalog.html
+++ b/catalog.html
@@ -4,36 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FrAzbuka</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header>
+<header class="title">
     <h1>Интернет-магазинчик фруктов и овощей "Фруктовая азбука"</h1>
     <hr>
 </header>
-<ul>
-    <li><a href="index.html">Главная</a></li>
-    <li><a href="catalog.html">Каталог</a></li>
-    <li><a href="contacts.html">Контакты</a></li>
+<ul class="menu">
+    <a href="index.html">Главная</a>
+    <a href="catalog.html">Каталог</a>
+    <a href="contacts.html">Контакты</a>
 </ul>
 <hr>
 <h2>Каталог</h2>
 <ol>
     <li>
         <p>
-            <img src="img/aple.jpg" alt="Яблоки Семиринка" style="height: auto; width: 200px; "><br>
+            <a href="catalog/aple.html"><img src="img/aple.jpg" alt="Яблоки Семиринка"
+                                             style="height: auto; width: 200px; "></a><br>
             <a href="catalog/aple.html">Яблоки "Семиринка"</a>
         </p>
     </li>
     <li>
         <p>
-            <img src="img/bananas.jpg" alt="Бананы" style="height: auto; width: 200px; "><br>
+            <a href="catalog/bananas.html"><img src="img/bananas.jpg" alt="Бананы" style="height: auto; width: 200px; "></a><br>
             <a href="catalog/bananas.html">Бананы</a>
         </p>
     </li>
 </ol>
 <footer>
     <hr>
-    <p>&copy; Все прва защищены</p>
+    <p>&copy; Все права защищены</p>
 </footer>
 </body>
 </html>
