--- a/contacts.html
+++ b/contacts.html
@@ -4,32 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FrAzbuka</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header>
+<header class="title">
     <h1>Интернет-магазинчик фруктов и овощей "Фруктовая азбука"</h1>
     <hr>
 </header>
-<ul>
-    <li><a href="index.html">Главная</a></li>
-    <li><a href="catalog.html">Каталог</a></li>
-    <li><a href="contacts.html">Контакты</a></li>
+<ul class="menu">
+    <a href="index.html">Главная</a>
+    <a href="catalog.html">Каталог</a>
+    <a href="contacts.html">Контакты</a>
 </ul>
 <hr>
 <h2>Напишите нам</h2>
-<form action="">
+<form id="form" action="">
     Имя <label>
-    <input type="text" placeholder="Женя">
+    <input type="text" placeholder="Женя" class="inputUp">
 </label><br>
     Email <label>
     <input type="email" placeholder="mail@mail.ru">
 </label><br>
     Тема <label>
-    <input type="text" placeholder="Большое спасибо!">
+    <input type="text" placeholder="Большое спасибо!" class="inputUp">
 </label><br>
     <p><b>Оставьте нам свой отзыв:</b></p>
-    <p><textarea name="comment" placeholder="Вы такие лапочки!" cols="60" rows="10"></textarea></p>
-    <p><input type="button" value=" Отправить "></p>
+    <p><textarea name="comment" placeholder="Вы такие лапочки!" cols="60" rows="10" class="inputUp"></textarea></p>
+    <p><input type="button" value=" Отправить " form="form"></p>
 </form>
 <h2>Адрес</h2>
 <p>Контактный номер нашего магазина - 01 &#128222</p>
