--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FrAzbuka</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header>
+<header class="title">
     <h1>Интернет-магазинчик фруктов и овощей "Фруктовая азбука"</h1>
     <hr>
 </header>
-<ul>
-    <li><a href="index.html">Главная</a></li>
-    <li><a href="catalog.html">Каталог</a></li>
-    <li><a href="contacts.html">Контакты</a></li>
+<ul class="menu">
+    <li class="menu_list menu_link_style"><a href="index.html">Главная</a></li>
+    <li class="menu_list menu_link_style"><a href="catalog.html">Каталог</a></li>
+    <li class="menu_list menu_link_style"><a href="contacts.html">Контакты</a></li>
 </ul>
 <hr>
 <h2>Главная</h2>
