--- a/catalog/bananas.html
+++ b/catalog/bananas.html
@@ -7,26 +7,62 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-<header class="title">
-    <h1>Интернет-магазинчик фруктов и овощей "Фруктовая азбука"</h1>
+<div class="header">
+    <a href="../index.html"><img src="../img/logo.jpg" alt="Логотип" class="logo"></a>
     <hr>
-</header>
-<ul class="menu">
-    <a href="../index.html">Главная</a>
-    <a href="../catalog.html">Каталог</a>
-    <a href="../contacts.html">Контакты</a>
-</ul>
-<hr>
+    <ul class="menu">
+        <li class="menu_list"><a href="../index.html" class="menu_link_style">Главная</a>
+        <li class="menu_list"><a href="../catalog.html" class="menu_link_style">Каталог</a>
+        <li class="menu_list"><a href="../contacts.html" class="menu_link_style">Контакты</a>
+    </ul>
+    <hr>
+</div>
 <h2>Бананы</h2>
-<img src="../img/bananio.gif" alt="Зеленое яблоко" title="Яблоко Семиринка" width="400" height="289">
+<img src="../img/bananio.gif" alt="Зеленое яблоко" title="Яблоко Семиринка" width="400" height="289" class="product img_border">
 <h3>Описание товара</h3>
-<p>Далеко-далеко за&nbsp;словесным горами в&nbsp;стране, гласных и&nbsp;согласных живут <b>рыбные</b> тексты. Раз,
+<p class="short_order">Далеко-далеко за&nbsp;словесным горами в&nbsp;стране, гласных и&nbsp;согласных живут
+    <b>рыбные</b> тексты. Раз,
     большой, парадигматическая? Гор коксмокс единственное вскоре, осталось даже последний даль продолжил. Текст, точках
     даже даль, <i>родного имени текстами лучше</i>.</p>
 <h3>Характеристики товара</h3>
-<p>Далеко-далеко за словесными горами в стран, гласных и согласных живут рыбные тексты. Моей, власти.</p>
+<ul class="properties_list">
+    <li>
+        <p class="properties_text">Lorem ipsum dolor sit.</p>
+    </li>
+    <li>
+        <p class="properties_text">Lorem ipsum dolor sit.</p>
+    </li>
+    <li>
+        <p class="properties_text">Lorem ipsum dolor sit.</p>
+    </li>
+</ul>
+<table>
+    <tr>
+        <td rowspan="4">Не обед</td>
+        <td colspan="4">Обед</td>
+    </tr>
+    <tr>
+        <td>пн</td>
+        <td>вт</td>
+        <td>ср</td>
+        <td>пт</td>
+    </tr>
+    <tr>
+        <td>14.20-15.00</td>
+        <td>13.00-13.13</td>
+        <td>14.00-15.44</td>
+        <td>15.25-15.30</td>
+    </tr>
+    <tr>
+        <td>14.30-15.00</td>
+        <td>14.59-17.00</td>
+        <td>14.30-15.55</td>
+        <td>11.30-12.00</td>
+    </tr>
+</table>
 <h3>Подробное описание товара</h3>
-<p>Далеко-далеко за&nbsp;словесными горами в&nbsp;стране, гласных и&nbsp;согласных живут рыбные тексты. Реторический
+<p class="full_order">Далеко-далеко за&nbsp;словесными горами в&nbsp;стране, гласных и&nbsp;согласных живут рыбные
+    тексты. Реторический
     его, коварных залетают рукописи маленький жизни снова текст необходимыми строчка последний мир вскоре текстами но&nbsp;путь
     буквоград текстов! Вершину последний заголовок мир переписали власти алфавит правилами, даже, все строчка страну
     великий путь жизни но&nbsp;дорогу которое взобравшись вдали щеке буквенных прямо коварных родного ты&nbsp;бросил
@@ -34,9 +70,9 @@
     коварных, подпоясал до&nbsp;страна взобравшись она ведущими жаренные&nbsp;не, города вопрос имеет домах щеке,
     реторический взгляд решила. Речью текст мир, по&nbsp;всей они lorem живет? Наш ведущими букв страну которое
     рукописи.</p>
-<footer>
+<div class="footer">
     <hr>
     <p>&copy; Все прва защищены</p>
-</footer>
+</div>
 </body>
 </html>
