--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header class="title">
-    <h1>Интернет-магазинчик фруктов и овощей "Фруктовая азбука"</h1>
+<div class="header">
+    <a href="index.html"><img src="img/logo.jpg" alt="Логотип" class="logo"></a>
     <hr>
-</header>
-<ul class="menu">
-    <li class="menu_list menu_link_style"><a href="index.html">Главная</a></li>
-    <li class="menu_list menu_link_style"><a href="catalog.html">Каталог</a></li>
-    <li class="menu_list menu_link_style"><a href="contacts.html">Контакты</a></li>
-</ul>
-<hr>
+    <ul class="menu">
+        <li class="menu_list"><a href="index.html" class="menu_link_style">Главная</a>
+        <li class="menu_list"><a href="catalog.html" class="menu_link_style">Каталог</a>
+        <li class="menu_list"><a href="contacts.html" class="menu_link_style">Контакты</a>
+    </ul>
+    <hr>
+</div>
 <h2>Главная</h2>
 <p>
     Приветствую вас, дорогие друзья!
@@ -26,9 +26,9 @@
     laudantium minus necessitatibus, nobis nulla numquam odio quas reiciendis rem reprehenderit rerum sequi sit veniam.
 </p>
 <a href="https://yandex.ru">Ссылочка во вне на Яндекс</a>
-<footer>
+<div class="footer">
     <hr>
     <p>&copy; Все права защищены</p>
-</footer>
+</div>
 </body>
 </html>
