--- a/catalog.html
+++ b/catalog.html
@@ -7,35 +7,36 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header class="title">
-    <h1>Интернет-магазинчик фруктов и овощей "Фруктовая азбука"</h1>
+<div class="header">
+    <a href="index.html"><img src="img/logo.jpg" alt="Логотип" class="logo"></a>
     <hr>
-</header>
-<ul class="menu">
-    <a href="index.html">Главная</a>
-    <a href="catalog.html">Каталог</a>
-    <a href="contacts.html">Контакты</a>
-</ul>
-<hr>
+    <ul class="menu">
+        <li class="menu_list"><a href="index.html" class="menu_link_style">Главная</a>
+        <li class="menu_list"><a href="catalog.html" class="menu_link_style">Каталог</a>
+        <li class="menu_list"><a href="contacts.html" class="menu_link_style">Контакты</a>
+    </ul>
+    <hr>
+</div>
 <h2>Каталог</h2>
 <ol>
     <li>
         <p>
             <a href="catalog/aple.html"><img src="img/aple.jpg" alt="Яблоки Семиринка"
-                                             style="height: auto; width: 200px; "></a><br>
+                                             class="vitrina img_border"></a><br>
             <a href="catalog/aple.html">Яблоки "Семиринка"</a>
         </p>
     </li>
     <li>
         <p>
-            <a href="catalog/bananas.html"><img src="img/bananas.jpg" alt="Бананы" style="height: auto; width: 200px; "></a><br>
+            <a href="catalog/bananas.html"><img src="img/bananas.jpg" alt="Бананы"
+                                                class="vitrina img_border"></a><br>
             <a href="catalog/bananas.html">Бананы</a>
         </p>
     </li>
 </ol>
-<footer>
+<div class="footer">
     <hr>
     <p>&copy; Все права защищены</p>
-</footer>
+</div>
 </body>
 </html>
