--- a/catalog.html
+++ b/catalog.html
@@ -7,36 +7,41 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="header">
-    <a href="index.html"><img src="img/logo.jpg" alt="Логотип" class="logo"></a>
-    <hr>
-    <ul class="menu">
-        <li class="menu_list"><a href="index.html" class="menu_link_style">Главная</a>
-        <li class="menu_list"><a href="catalog.html" class="menu_link_style">Каталог</a>
-        <li class="menu_list"><a href="contacts.html" class="menu_link_style">Контакты</a>
-    </ul>
-    <hr>
-</div>
-<h2>Каталог</h2>
-<ol>
-    <li>
-        <p>
-            <a href="catalog/aple.html"><img src="img/aple.jpg" alt="Яблоки Семиринка"
-                                             class="vitrina img_border"></a><br>
+<div class="container">
+    <div class="header">
+        <div class="logo_cont">
+            <a href="index.html">
+                <img src="img/logo.jpg" alt="Логотип" class="logo">
+            </a>
+        </div>
+
+        <ul class="menu">
+            <li class="menu_list"><a href="index.html" class="menu_link_style">Главная</a>
+            <li class="menu_list"><a href="catalog.html" class="menu_link_style">Каталог</a>
+            <li class="menu_list"><a href="contacts.html" class="menu_link_style">Контакты</a>
+        </ul>
+    </div>
+    <div class="content">
+    <h2>Каталог</h2>
+    <div class="vitrina">
+        <div class="produce">
+            <a href="catalog/aple.html">
+                <img src="img/aple.jpg" alt="Яблоки Семиринка" class="img_border">
+            </a><br>
             <a href="catalog/aple.html">Яблоки "Семиринка"</a>
-        </p>
-    </li>
-    <li>
-        <p>
-            <a href="catalog/bananas.html"><img src="img/bananas.jpg" alt="Бананы"
-                                                class="vitrina img_border"></a><br>
+        </div>
+        <div class="produce">
+            <a href="catalog/bananas.html">
+                <img src="img/bananas.jpg" alt="Бананы"
+                     class="img_border">
+            </a><br>
             <a href="catalog/bananas.html">Бананы</a>
-        </p>
-    </li>
-</ol>
-<div class="footer">
-    <hr>
-    <p>&copy; Все права защищены</p>
+        </div>
+    </div>
+    </div>
+    <div class="footer">
+        <p>&copy; Все права защищены</p>
+    </div>
 </div>
 </body>
 </html>
