--- a/index.html
+++ b/index.html
@@ -7,28 +7,35 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="header">
-    <a href="index.html"><img src="img/logo.jpg" alt="Логотип" class="logo"></a>
-    <hr>
-    <ul class="menu">
-        <li class="menu_list"><a href="index.html" class="menu_link_style">Главная</a>
-        <li class="menu_list"><a href="catalog.html" class="menu_link_style">Каталог</a>
-        <li class="menu_list"><a href="contacts.html" class="menu_link_style">Контакты</a>
-    </ul>
-    <hr>
-</div>
-<h2>Главная</h2>
-<p>
-    Приветствую вас, дорогие друзья!
-</p>
-<p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem cum exercitationem id itaque iusto laborum
-    laudantium minus necessitatibus, nobis nulla numquam odio quas reiciendis rem reprehenderit rerum sequi sit veniam.
-</p>
-<a href="https://yandex.ru">Ссылочка во вне на Яндекс</a>
-<div class="footer">
-    <hr>
-    <p>&copy; Все права защищены</p>
+<div class="container">
+    <div class="header">
+        <div class="logo_cont">
+            <a href="index.html">
+                <img src="img/logo.jpg" alt="Логотип" class="logo">
+            </a>
+        </div>
+
+        <ul class="menu">
+            <li class="menu_list"><a href="index.html" class="menu_link_style">Главная</a>
+            <li class="menu_list"><a href="catalog.html" class="menu_link_style">Каталог</a>
+            <li class="menu_list"><a href="contacts.html" class="menu_link_style">Контакты</a>
+        </ul>
+    </div>
+    <div class="content">
+        <h2>Главная</h2>
+        <p>
+            Приветствую вас, дорогие друзья!
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem cum exercitationem id itaque iusto laborum
+            laudantium minus necessitatibus, nobis nulla numquam odio quas reiciendis rem reprehenderit rerum sequi sit
+            veniam.
+        </p>
+        <a href="https://yandex.ru">Не нашел у нас? Ищи на Яндекс!</a>
+    </div>
+    <div class="footer">
+        <p>&copy; Все права защищены</p>
+    </div>
 </div>
 </body>
 </html>
